# scalemail

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md
assets/: CMakeLists.txt
assets/maps/: actors.tsx  h_scroll.tsx  items.tsx  map1.tmx  test_map.tmx  test_map2.tmx  world.tsx
assets/shaders/: fade.frag  fade.vert  sprite.frag  sprite.vert  tile.frag  tile.vert
assets/shaders/120/: fade.frag  fade.vert  flat.frag  flat.vert  imgui.frag  imgui.vert  line.vert  particle.vert  sprite.frag  sprite.vert  tile.frag  tile.vert
assets/shaders/330/: flat.frag  flat.vert  imgui.frag  imgui.vert  line.vert  particle.vert  sprite.vert  tile.vert
extlibs/: CMakeLists.txt
scalemail/: CMakeLists.txt
scalemail/include/: engine.hpp
scalemail/src/: main.cpp
scalemail_engine/: CMakeLists.txt
scalemail_engine/include/: actor_util.hpp  ai_behavior.hpp  ai_behavior_factory.hpp  ai_system.hpp  ambient_light.hpp  asset_manager.hpp  blend.hpp  bounds.hpp  bullet_data.hpp  bullet_system.hpp  bullet_util.hpp  bury_system.hpp  camera.hpp  camera_system.hpp  collision.hpp  collision_group.hpp  collision_test.hpp  color_util.hpp  cursor.hpp  damage_system.hpp  direction.hpp  direction_util.hpp  door_system.hpp  ease.hpp  engine_start_options.hpp  entity.hpp  entity_collision.hpp  entity_create.hpp  entity_manager.hpp  entity_system.hpp  entity_types.hpp  entity_util.hpp  expire_system.hpp  facing_system.hpp  fade_shader.hpp  fake_map.hpp  font.hpp  game.hpp  game_state.hpp  game_state_manager.hpp  (+70 more)
scalemail_engine/include/ai/: ai_behavior.hpp  ai_behavior_factory.hpp  ai_node.hpp  ai_node_status.hpp  ai_tree.hpp  ai_whiteboard.hpp  ally_ai.hpp  bat_ai.hpp  blob_ai.hpp  skeleton_ai.hpp  skeleton_warrior_ai.hpp  vampire_ai.hpp
scalemail_engine/include/ai/ai_behaviors/: ally_ai.hpp  bat_ai.hpp  blob_ai.hpp  skeleton_ai.hpp  skeleton_king_ai.hpp  skeleton_warrior_ai.hpp  vampire_ai.hpp  wisp_ai.hpp
scalemail_engine/include/ai/ai_nodes/: composite_ai_node.hpp  cooldown_ai_node.hpp  decorator_ai_node.hpp  entity_count_ai_node.hpp  failure_ai_node.hpp  fire_at_foes_ai_node.hpp  fire_at_target_ai_node.hpp  function_ai_node.hpp  inverter_ai_node.hpp  random_move_direction_ai_node.hpp  seek_foe_ai_node.hpp  seek_target_ai_node.hpp  selector_ai_node.hpp  sequence_ai_node.hpp  stop_firing_ai_node.hpp  success_ai_node.hpp  target_attacker_ai_node.hpp  target_range_ai_node.hpp  wander_ai_node.hpp
scalemail_engine/include/dev/: ai_editor.hpp  bullet_editor.hpp  debug_system.hpp  dev_gui.hpp  entity_list_box.hpp  gun_editor.hpp  light_editor.hpp  particle_editor.hpp  physics_editor.hpp
scalemail_engine/include/gui/: gui.hpp  gui_screen.hpp  imgui.hpp  imgui_ext.hpp  imgui_glfw.hpp  pause_gui_screen.hpp  player_hud_gui_screen.hpp
scalemail_engine/src/: actor_util.cpp  ai_behavior_factory.cpp  ai_system.cpp  ambient_light.cpp  asset_manager.cpp  blend.cpp  bounds.cpp  bullet_system.cpp  bullet_util.cpp  bury_system.cpp  camera.cpp  camera_system.cpp  collision.cpp  collision_test.cpp  cursor.cpp  damage_system.cpp  direction_util.cpp  door_system.cpp  engine.cpp  entity.cpp  entity_create.cpp  entity_manager.cpp  entity_system.cpp  entity_util.cpp  expire_system.cpp  facing_system.cpp  fake_map.cpp  font.cpp  game_state.cpp  game_state_manager.cpp  game_window.cpp  gl_util.cpp  gun_system.cpp  health_gauge.cpp  health_system.cpp  input.cpp  input_device.cpp  intro_game_state.cpp  inventory_system.cpp  layer.cpp  (+35 more)
scalemail_engine/src/ai/: ai_behavior_factory.cpp  ai_node.cpp  ai_tree.cpp  ai_whiteboard.cpp  ally_ai.cpp  bat_ai.cpp  blob_ai.cpp  skeleton_ai.cpp  skeleton_warrior_ai.cpp  vampire_ai.cpp
scalemail_engine/src/ai/ai_behaviors/: ally_ai.cpp  bat_ai.cpp  blob_ai.cpp  skeleton_ai.cpp  skeleton_king_ai.cpp  skeleton_warrior_ai.cpp  vampire_ai.cpp  wisp_ai.cpp
scalemail_engine/src/ai/ai_nodes/: composite_ai_node.cpp  cooldown_ai_node.cpp  decorator_ai_node.cpp  entity_count_ai_node.cpp  failure_ai_node.cpp  fire_at_foes_ai_node.cpp  fire_at_target_ai_node.cpp  function_ai_node.cpp  inverter_ai_node.cpp  random_move_direction_ai_node.cpp  seek_foe_ai_node.cpp  seek_target_ai_node.cpp  selector_ai_node.cpp  sequence_ai_node.cpp  stop_firing_ai_node.cpp  success_ai_node.cpp  target_attacker_ai_node.cpp  target_range_ai_node.cpp  wander_ai_node.cpp
scalemail_engine/src/dev/: ai_editor.cpp  bullet_editor.cpp  debug_system.cpp  dev_gui.cpp  entity_list_box.cpp  gun_editor.cpp  light_editor.cpp  particle_editor.cpp  physics_editor.cpp
scalemail_engine/src/entity_types/: actor.cpp  bullet.cpp  camera.cpp  door.cpp  heal_fx.cpp  loot.cpp  prop.cpp  torch.cpp  trigger.cpp
scalemail_engine/src/gui/: gui.cpp  gui_screen.cpp  imgui.cpp  imgui_ext.cpp  imgui_glfw.cpp  pause_gui_screen.cpp  player_hud_gui_screen.cpp
scalemail_framework/include/: sprite_batch.hpp
